kubernetes/kustomize/circle-partner-navigator/overlays/preprod/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: circle-partner-navigator
  labels:
    name: circle-partner-navigator
    environment: preprod
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
