kubernetes/kustomize/circle-partner-navigator/overlays/preprod/backend-patch.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: cpn-backend
spec:
  replicas: 0
  template:
    metadata:
      annotations:
        instrumentation.opentelemetry.io/inject-nodejs: "opentelemetry/otel-instrumentation"
    spec:
      imagePullSecrets:
        - name: quay-image-pull-secret
      securityContext:
        runAsUser: 1000
        fsGroup: 1000
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: cpn-backend
          command:
            - "npm"
          args:
            - "run"
            - "start"
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: false
            runAsNonRoot: true
            runAsUser: 1000
          resources:
            limits:
              cpu: "2000m"
              memory: "2Gi"
            requests:
              cpu: "10m"
              memory: "512Mi"
          livenessProbe:
            httpGet:
              path: /_health
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /_health
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 5
            timeoutSeconds: 3
            failureThreshold: 3
