kubernetes/kustomize/circle-partner-navigator/overlays/preprod/emg-patch.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: express-mail-gateway
spec:
  template:
    metadata:
      annotations:
        instrumentation.opentelemetry.io/inject-nodejs: "opentelemetry/otel-instrumentation"
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        fsGroup: 1000
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: express-mail-gateway
          command:
            - "npm"
          args:
            - "run"
            - "start"
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: false
            runAsNonRoot: true
            runAsUser: 1000
          resources:
            limits:
              cpu: "200m"
              memory: "256Mi"
            requests:
              cpu: "50m"
              memory: "64Mi"
      initContainers: []
      volumes: []
