kubernetes/kustomize/circle-partner-navigator/overlays/preprod/frontend-patch.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cpn-front
spec:
  replicas: 2
  template:
    metadata:
      annotations:
        instrumentation.opentelemetry.io/inject-nodejs: "opentelemetry/otel-instrumentation"
    spec:
      imagePullSecrets:
        - name: quay-image-pull-secret
      securityContext:
        runAsUser: 101
        fsGroup: 101
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: cpn-front
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            runAsUser: 101
          resources:
            limits:
              cpu: "500m"
              memory: "512Mi"
            requests:
              cpu: "30m"
              memory: "128Mi"
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 5
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app: cpn-front
                topologyKey: kubernetes.io/hostname
